--- a/source/index.html
+++ b/source/index.html
@@ -18,18 +18,18 @@
     <nav class="main-menu">
       <ul class="main-menu__list">
         <li class="main-menu__item"><a>Главная</a></li>
-        <li class="main-menu__item"><a class="main-menu__link" href="#">Каталог продукции</li>
-        <li class="main-menu__item"><a class="main-menu__link" href="#">Подбор программы</li>
+        <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
+        <li class="main-menu__item"><a class="main-menu__link" href="#">Подбор программы</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-    <section class="promo">
+  <main class="page-main">
+    <section class="page-main__promo promo">
       <h2 class="promo__title">Функциональное питание для котов</h2>
       <b class="promo__slogan">Занялся собой? Займись котом!</b>
       <a class="promo__button button" href="#">Подобрать программу</a>
     </section>
-    <section class="categories">
+    <section class="page-main__categories categories">
       <h2 class="categories__title visually-hidden">Категории</h2>
       <section class="categories__slim slim">
         <h3 class="slim__title">Похудение</h3>
@@ -43,7 +43,7 @@
         <a class="slim__button" href="#">Каталог pro</a>
       </section>
     </section>
-    <section class="advantages">
+    <section class="page-main__advantages advantages">
       <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list advantages-list">
         <li class="advantages-list__item">Функциональное питание содержит только полезные питательные вещества.</li>
@@ -52,7 +52,7 @@
         <li class="advantages-list__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
       </ul>
     </section>
-    <section class="example">
+    <section class="page-main__example example">
       <h2 class="example__title">Живой пример</h2>
       <p class="example__about">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       <div class="example__progress progress">
@@ -70,7 +70,7 @@
         </div>
       </div>
     </section>
-    <section class="contacts">
+    <section class="page-main__contacts contacts">
       <h2 class="contacts__title visually-hidden">Контакты</h2>
       <div class="contacts__wrapper">
         <p class="contacts__slogan">приглашаем  к сотрудничеству  дилеров!</p>
