--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
       <ul class="main-menu__list">
         <li class="main-menu__item"><a>Главная</a></li>
         <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
-        <li class="main-menu__item"><a class="main-menu__link" href="#">Подбор программы</a></li>
+        <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
       </ul>
     </nav>
   </header>
