--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,7 +19,7 @@
       <ul class="main-menu__list">
         <li class="main-menu__item"><a class="main-menu__link" href="index.html">Главная</a></li>
         <li class="main-menu__item"><a>Каталог продукции</a></li>
-        <li class="main-menu__item"><a class="main-menu__link" href="#">Подбор программы</a></li>
+        <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
       </ul>
     </nav>
   </header>
@@ -256,21 +256,22 @@
         <img class="contacts__map" src="#" width="1345" height="645" alt="Магазин находится по адресу: ул. Большая Конюшенная, д. 19/8  г.Санкт-Петербург">
       </div>
     </section>
-    <footer class="page-footer">
-      <a class="page-footer__title-link" href="#">
-        <h2 class="page-footer__title">
-          <img class="page-footer__title-image" src="#" width="128" height="24" alt="Магазин Cat energy">
-        </h2>
-      </a>
-      <div class="page-footer__social social">
-        <a class="social__link" href="#" aria-label="Мы в Vkontakte"><span class="social__icon">VK</span></a>
-        <a class="social__link" href="#" aria-label="Мы в Instagram"><span class="social__icon">INST</span></a>
-        <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">FB</span></a>
-      </div>
-      <div class="page-footer__copyright">
-        <a class="copyright__company" href="#">HTML Academy</a>
-        <a class="copyright__logo" href="#"><img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy"></a>
-      </div>
-    </footer>
-  </body>
-  </html>
+  </main>
+  <footer class="page-footer">
+    <a class="page-footer__title-link" href="#">
+      <h2 class="page-footer__title">
+        <img class="page-footer__title-image" src="#" width="128" height="24" alt="Магазин Cat energy">
+      </h2>
+    </a>
+    <div class="page-footer__social social">
+      <a class="social__link" href="#" aria-label="Мы в Vkontakte"><span class="social__icon">VK</span></a>
+      <a class="social__link" href="#" aria-label="Мы в Instagram"><span class="social__icon">INST</span></a>
+      <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">FB</span></a>
+    </div>
+    <div class="page-footer__copyright">
+      <a class="copyright__company" href="#">HTML Academy</a>
+      <a class="copyright__logo" href="#"><img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy"></a>
+    </div>
+  </footer>
+</body>
+</html>
