--- a/source/index.html
+++ b/source/index.html
@@ -6,13 +6,8 @@
 </head>
 <body>
   <header class="page-header">
-    <a class="page-header__logo-link">
-      <img class="page-header__logo-image" src="#" width="33" height="38" alt="Логотип магазина Cat energy">
-    </a>
-    <a class="page-header__title-link">
-      <h1 class="page-header__title">
-        <img class="page-header__title-image" src="#" width="101" height="18" alt="Магазин Cat energy">
-      </h1>
+    <a class="page-header__logo-link" href="#">
+      <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
     </a>
     <button class="burger-menu" aria-label="Главное меню"></button>
     <nav class="main-menu">
@@ -25,8 +20,9 @@
   </header>
   <main class="page-main">
     <section class="page-main__promo promo">
-      <h2 class="promo__title">Функциональное питание для котов</h2>
+      <h1 class="promo__title">Функциональное питание для котов</h1>
       <b class="promo__slogan">Занялся собой? Займись котом!</b>
+      <img class="promo__image" src="#" width="280" height="270" alt="Cat energy pro из курицы">
       <a class="promo__button button" href="#">Подобрать программу</a>
     </section>
     <section class="page-main__categories categories">
@@ -77,22 +73,20 @@
         <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
       </div>
       <div>
-        <img class="contacts__map" src="#" width="1345" height="645" alt="Магазин находится по адресу: ул. Большая Конюшенная, д. 19/8  г.Санкт-Петербург">
+        <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
       </div>
     </section>
   </main>
   <footer class="page-footer">
-    <a class="page-footer__title-link" href="#">
-      <h2 class="page-footer__title">
-        <img class="page-footer__title-image" src="#" width="128" height="24" alt="Магазин Cat energy">
-      </h2>
+    <a class="page-footer__site-title-link" href="#">
+      <img class="page-footer__site-title" src="#" width="128" height="24" alt="Магазин Cat energy">
     </a>
     <div class="page-footer__social social">
       <a class="social__link" href="#" aria-label="Мы в Vkontakte"><span class="social__icon">VK</span></a>
       <a class="social__link" href="#" aria-label="Мы в Instagram"><span class="social__icon">INST</span></a>
       <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">FB</span></a>
     </div>
-    <div class="page-footer__copyright">
+    <div class="page-footer__copyright copyright">
       <a class="copyright__company" href="#">HTML Academy</a>
       <a class="copyright__logo" href="#"><img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy"></a>
     </div>
