поправил лого в хедере и футере, добавил обертку товарам

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,13 +6,8 @@
 </head>
 <body>
   <header class="page-header">
-    <a class="page-header__logo-link">
-      <img class="page-header__logo-image" src="#" width="33" height="38" alt="Логотип магазина Cat energy">
-    </a>
-    <a class="page-header__title-link">
-      <h2 class="page-header__title">
-        <img class="page-header__title-image" src="#" width="101" height="18" alt="Каталог продукции магазина Cat energy">
-      </h2>
+    <a class="page-header__logo-link" href="#">
+      <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
     </a>
     <button class="burger-menu" aria-label="Главное меню"></button>
     <nav class="main-menu">
@@ -26,176 +21,196 @@
   <main class="page-main">
     <h1 class="page-main__title">Каталог продукции</h1>
     <div class="page-main__products">
-      <section class="page-main__product product">
-        <div class="product__content">
-          <img class="product__image" src="#" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 500г.">
-          <div class="product__container">
-            <h3 class="product__title">Cat Energy  PRO 500 г</h3>
-            <table class="product__table table-properties">
-              <tr>
-                <td class="table-properties__property">Объем</td>
-                <td class="table-properties__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Вкус</td>
-                <td class="table-properties__value">Курица</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Цена</td>
-                <td class="table-properties__value">700 Р.</td>
-              </tr>
-            </table>
+      <div class="page-main__product">
+        <section class="product">
+          <div class="product__content">
+            <img class="product__image" src="#" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 500г.">
+            <div class="product__container">
+              <h3 class="product__title">Cat Energy  PRO 500 г</h3>
+              <table class="product__table table-properties">
+                <tr>
+                  <td class="table-properties__property">Объем</td>
+                  <td class="table-properties__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Вкус</td>
+                  <td class="table-properties__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Цена</td>
+                  <td class="table-properties__value">700 Р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
-        </div>
-        <a class="product__button button" href="#">Заказать</a>
-      </section>
+          <a class="product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="page-main__product product">
-        <div class="product__content">
-          <img class="product__image" src="#" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 1000г.">
-          <div class="product__container">
-            <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
-            <table class="product__table table-properties">
-              <tr>
-                <td class="table-properties__property">Объем</td>
-                <td class="table-properties__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Вкус</td>
-                <td class="table-properties__value">Курица</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Цена</td>
-                <td class="table-properties__value">1000 Р.</td>
-              </tr>
-            </table>
+      <div class="page-main__product">
+        <section class="product">
+          <div class="product__content">
+            <img class="product__image" src="#" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 1000г.">
+            <div class="product__container">
+              <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
+              <table class="product__table table-properties">
+                <tr>
+                  <td class="table-properties__property">Объем</td>
+                  <td class="table-properties__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Вкус</td>
+                  <td class="table-properties__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Цена</td>
+                  <td class="table-properties__value">1000 Р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
-        </div>
-        <a class="product__button button" href="#">Заказать</a>
-      </section>
+          <a class="product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="page-main__product product">
-        <div class="product__content">
-          <img class="product__image" src="#" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 500г.">
-          <div class="product__container">
-            <h3 class="product__title">Cat Energy  PRO 500 г</h3>
-            <table class="product__table table-properties">
-              <tr>
-                <td class="table-properties__property">Объем</td>
-                <td class="table-properties__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Вкус</td>
-                <td class="table-properties__value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Цена</td>
-                <td class="table-properties__value">700 Р.</td>
-              </tr>
-            </table>
+      <div class="page-main__product">
+        <section class="product">
+          <div class="product__content">
+            <img class="product__image" src="#" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 500г.">
+            <div class="product__container">
+              <h3 class="product__title">Cat Energy  PRO 500 г</h3>
+              <table class="product__table table-properties">
+                <tr>
+                  <td class="table-properties__property">Объем</td>
+                  <td class="table-properties__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Вкус</td>
+                  <td class="table-properties__value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Цена</td>
+                  <td class="table-properties__value">700 Р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
-        </div>
-        <a class="product__button button" href="#">Заказать</a>
-      </section>
+          <a class="product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="page-main__product product">
-        <div class="product__content">
-          <img class="product__image" src="#" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
-          <div class="product__container">
-            <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
-            <table class="product__table table-properties">
-              <tr>
-                <td class="table-properties__property">Объем</td>
-                <td class="table-properties__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Вкус</td>
-                <td class="table-properties__value">Рыюа</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Цена</td>
-                <td class="table-properties__value">1000 Р.</td>
-              </tr>
-            </table>
+      <div class="page-main__product">
+        <section class="product">
+          <div class="product__content">
+            <img class="product__image" src="#" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
+            <div class="product__container">
+              <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
+              <table class="product__table table-properties">
+                <tr>
+                  <td class="table-properties__property">Объем</td>
+                  <td class="table-properties__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Вкус</td>
+                  <td class="table-properties__value">Рыюа</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Цена</td>
+                  <td class="table-properties__value">1000 Р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
-        </div>
-        <a class="product__button button" href="#">Заказать</a>
-      </section>
+          <a class="product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="page-main__product product">
-        <div class="product__content">
-          <img class="product__image" src="#" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 500г.">
-          <div class="product__container">
-            <h3 class="product__title">Cat Energy slim 500 г</h3>
-            <table class="product__table table-properties">
-              <tr>
-                <td class="table-properties__property">Объем</td>
-                <td class="table-properties__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Вкус</td>
-                <td class="table-properties__value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Цена</td>
-                <td class="table-properties__value">400 Р.</td>
-              </tr>
-            </table>
+      <div class="page-main__product">
+        <section class="product">
+          <div class="product__content">
+            <img class="product__image" src="#" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 500г.">
+            <div class="product__container">
+              <h3 class="product__title">Cat Energy slim 500 г</h3>
+              <table class="product__table table-properties">
+                <tr>
+                  <td class="table-properties__property">Объем</td>
+                  <td class="table-properties__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Вкус</td>
+                  <td class="table-properties__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Цена</td>
+                  <td class="table-properties__value">400 Р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
-        </div>
-        <a class="product__button button" href="#">Заказать</a>
-      </section>
+          <a class="product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="page-main__product product">
-        <div class="product__content">
-          <img class="product__image" src="#" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
-          <div class="product__container">
-            <h3 class="product__title">Cat Energy slim 1000 г</h3>
-            <table class="product__table table-properties">
-              <tr>
-                <td class="table-properties__property">Объем</td>
-                <td class="table-properties__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Вкус</td>
-                <td class="table-properties__value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Цена</td>
-                <td class="table-properties__value">700 Р.</td>
-              </tr>
-            </table>
+      <div class="page-main__product">
+        <section class="product">
+          <div class="product__content">
+            <img class="product__image" src="#" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
+            <div class="product__container">
+              <h3 class="product__title">Cat Energy slim 1000 г</h3>
+              <table class="product__table table-properties">
+                <tr>
+                  <td class="table-properties__property">Объем</td>
+                  <td class="table-properties__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Вкус</td>
+                  <td class="table-properties__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Цена</td>
+                  <td class="table-properties__value">700 Р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
-        </div>
-        <a class="product__button button" href="#">Заказать</a>
-      </section>
+          <a class="product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="page-main__product product">
-        <div class="product__content">
-          <img class="product__image" src="#" width="140" height="144" alt="Упаковка рисовой каши Cat energy slim, 500г.">
-          <div class="product__container">
-            <h3 class="product__title">Cat Energy slim 500 г</h3>
-            <table class="product__table table-properties">
-              <tr>
-                <td class="table-properties__property">Объем</td>
-                <td class="table-properties__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Вкус</td>
-                <td class="table-properties__value">Рис</td>
-              </tr>
-              <tr>
-                <td class="table-properties__property">Цена</td>
-                <td class="table-properties__value">500 Р.</td>
-              </tr>
-            </table>
+      <div class="page-main__product">
+        <section class="product">
+          <div class="product__content">
+            <img class="product__image" src="#" width="140" height="144" alt="Упаковка рисовой каши Cat energy slim, 500г.">
+            <div class="product__container">
+              <h3 class="product__title">Cat Energy slim 500 г</h3>
+              <table class="product__table table-properties">
+                <tr>
+                  <td class="table-properties__property">Объем</td>
+                  <td class="table-properties__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Вкус</td>
+                  <td class="table-properties__value">Рис</td>
+                </tr>
+                <tr>
+                  <td class="table-properties__property">Цена</td>
+                  <td class="table-properties__value">500 Р.</td>
+                </tr>
+              </table>
+            </div>
           </div>
-        </div>
-        <a class="product__button button" href="#">Заказать</a>
-      </section>
-      <p class="product__text product__text--font">Показать еще 100500 товаров</p>
-      <p class="product__text">На самом деле вкусов гораздо больше!</p>
-      <a class="product__button-more button button--gray" href="#" >Показать все</a>
+          <a class="product__button button" href="#">Заказать</a>
+        </section>
+      </div>
+      <div class="page-main__product">
+        <section class="more-product">
+          <div class="more-product__content">
+            <p class="more-product__text more-product__text--font">Показать еще 100500 товаров</p>
+            <p class="more-product__text">На самом деле вкусов гораздо больше!</p>
+            <a class="more-product__button button button--gray" href="#" >Показать все</a>
+          </div>
+        </section>
+      </div>
     </div>
     <div class="page-main__extra extra-products">
       <h2 class="extra-products__title">Дополнительные товары</h2>
@@ -258,17 +273,15 @@
     </section>
   </main>
   <footer class="page-footer">
-    <a class="page-footer__title-link" href="#">
-      <h2 class="page-footer__title">
-        <img class="page-footer__title-image" src="#" width="128" height="24" alt="Магазин Cat energy">
-      </h2>
+    <a class="page-footer__site-title-link" href="index.html">
+      <img class="page-footer__site-title" src="#" width="128" height="24" alt="Магазин Cat energy">
     </a>
     <div class="page-footer__social social">
       <a class="social__link" href="#" aria-label="Мы в Vkontakte"><span class="social__icon">VK</span></a>
       <a class="social__link" href="#" aria-label="Мы в Instagram"><span class="social__icon">INST</span></a>
       <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">FB</span></a>
     </div>
-    <div class="page-footer__copyright">
+    <div class="page-footer__copyright copyright">
       <a class="copyright__company" href="#">HTML Academy</a>
       <a class="copyright__logo" href="#"><img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy"></a>
     </div>
