--- a/source/form.html
+++ b/source/form.html
@@ -6,13 +6,8 @@
 </head>
 <body>
   <header class="page-header">
-    <a class="page-header__logo-link">
-      <img class="page-header__logo-image" src="#" width="33" height="38" alt="Логотип магазина Cat energy">
-    </a>
-    <a class="page-header__title-link">
-      <h2 class="page-header__title">
-        <img class="page-header__title-image" src="#" width="101" height="18" alt="Каталог продукции магазина Cat energy">
-      </h2>
+    <a class="page-header__logo-link" href="#">
+      <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
     </a>
     <button class="burger-menu" aria-label="Главное меню"></button>
     <nav class="main-menu">
@@ -52,41 +47,39 @@
         </div>
       </fieldset>
       <fieldset class="page-main__comment comment">
-        <legend class="comment__title">Комментарий</legend>
-        <label class="visually-hidden" for="user-comment">Ваш комментарий</label>
-        <textarea class="comment__text" id="user-comment" rows="6" cols="35" placeholder="РАССКАЖИ ОБО ВСЕХ ПОВАДКАХ КОТА"></textarea>
-      </fieldset>
-      <fieldset></fieldset>
-    </form>
+        <label class="visually-hidden" for="user-comment">Комментарий
+          <textarea class="comment__text" id="user-comment" rows="6" cols="35" placeholder="РАССКАЖИ ОБО ВСЕХ ПОВАДКАХ КОТА"></textarea>
+        </label>
+        </fieldset>
+        <fieldset></fieldset>
+      </form>
 
 
 
-    <section class="contacts">
-      <h2 class="contacts__title visually-hidden">Контакты</h2>
-      <div class="contacts__wrapper">
-        <p class="contacts__slogan">приглашаем  к сотрудничеству  дилеров!</p>
-        <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
+      <section class="contacts">
+        <h2 class="contacts__title visually-hidden">Контакты</h2>
+        <div class="contacts__wrapper">
+          <p class="contacts__slogan">приглашаем  к сотрудничеству  дилеров!</p>
+          <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
+        </div>
+        <div>
+          <img class="contacts__map" src="#" width="1345" height="645" alt="Магазин находится по адресу: ул. Большая Конюшенная, д. 19/8  г.Санкт-Петербург">
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <a class="page-footer__site-title-link" href="index.html">
+        <img class="page-footer__site-title" src="#" width="128" height="24" alt="Магазин Cat energy">
+      </a>
+      <div class="page-footer__social social">
+        <a class="social__link" href="#" aria-label="Мы в Vkontakte"><span class="social__icon">VK</span></a>
+        <a class="social__link" href="#" aria-label="Мы в Instagram"><span class="social__icon">INST</span></a>
+        <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">FB</span></a>
       </div>
-      <div>
-        <img class="contacts__map" src="#" width="1345" height="645" alt="Магазин находится по адресу: ул. Большая Конюшенная, д. 19/8  г.Санкт-Петербург">
+      <div class="page-footer__copyright">
+        <a class="copyright__company" href="#">HTML Academy</a>
+        <a class="copyright__logo" href="#"><img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy"></a>
       </div>
-    </section>
-  </main>
-  <footer class="page-footer">
-    <a class="page-footer__title-link" href="#">
-      <h2 class="page-footer__title">
-        <img class="page-footer__title-image" src="#" width="128" height="24" alt="Магазин Cat energy">
-      </h2>
-    </a>
-    <div class="page-footer__social social">
-      <a class="social__link" href="#" aria-label="Мы в Vkontakte"><span class="social__icon">VK</span></a>
-      <a class="social__link" href="#" aria-label="Мы в Instagram"><span class="social__icon">INST</span></a>
-      <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">FB</span></a>
-    </div>
-    <div class="page-footer__copyright">
-      <a class="copyright__company" href="#">HTML Academy</a>
-      <a class="copyright__logo" href="#"><img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy"></a>
-    </div>
-  </footer>
-</body>
-</html>
+    </footer>
+  </body>
+  </html>
