Добавил путь ссылке на index.html в лого, добавил iframe вместо изображения карты

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header class="page-header">
-    <a class="page-header__logo-link" href="#">
+    <a class="page-header__logo-link" href="index.html">
       <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
     </a>
     <button class="burger-menu" aria-label="Главное меню"></button>
@@ -268,7 +268,7 @@
         <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
       </div>
       <div>
-        <img class="contacts__map" src="#" width="1345" height="645" alt="Магазин находится по адресу: ул. Большая Конюшенная, д. 19/8  г.Санкт-Петербург">
+        <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
       </div>
     </section>
   </main>
