поправил БЭМ разметку после проверки в html tree

--- a/source/form.html
+++ b/source/form.html
@@ -105,7 +105,7 @@
       <a class="social__link" href="#" aria-label="Мы в Instagram"><span class="social__icon">INST</span></a>
       <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">FB</span></a>
     </div>
-    <div class="page-footer__copyright">
+    <div class="page-footer__copyright copyright">
       <a class="copyright__company" href="#">HTML Academy</a>
       <a class="copyright__logo" href="#"><img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy"></a>
     </div>
