--- a/source/form.html
+++ b/source/form.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Cat energy. Подбор программы</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="page-header">
     <a class="page-header__logo-link" href="index.html">
       <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
     </a>
-    <button class="burger-menu" aria-label="Главное меню"></button>
+    <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
     <nav class="main-menu">
       <ul class="main-menu__list">
         <li class="main-menu__item"><a class="main-menu__link" href="index.html">Главная</a></li>
