--- a/source/index.html
+++ b/source/index.html
@@ -3,28 +3,32 @@
 <head>
   <meta charset="utf-8">
   <title>Cat energy. Функционаьлное питание для котов.</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
-  <header class="page-header">
-    <a class="page-header__logo-link" href="#">
-      <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
-    </a>
-    <button class="burger-menu" aria-label="Главное меню"></button>
-    <nav class="main-menu">
-      <ul class="main-menu__list">
-        <li class="main-menu__item"><a>Главная</a></li>
-        <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
-        <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
-      </ul>
-    </nav>
+<body class="site-grid">
+  <header class="page-header site-grid__wrapper">
+    <div class="page-header__wrapper">
+      <a class="page-header__logo-link" href="#">
+        <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
+      </a>
+      <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
+      <nav class="main-menu">
+        <ul class="main-menu__list">
+          <li class="main-menu__item"><a>Главная</a></li>
+          <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
+          <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-  <main class="page-main">
+  <main class="page-main site-grid__wrapper">
     <section class="page-main__promo promo">
       <h1 class="promo__title">Функциональное питание для котов</h1>
       <b class="promo__slogan">Занялся собой? Займись котом!</b>
-      <img class="promo__image" src="#" width="280" height="270" alt="Cat energy pro из курицы">
+      <img class="promo__image" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Cat energy pro из курицы">
       <a class="promo__button button" href="#">Подобрать программу</a>
     </section>
+
     <section class="page-main__categories categories">
       <h2 class="categories__title visually-hidden">Категории</h2>
       <section class="categories__slim slim">
@@ -77,7 +81,7 @@
       </div>
     </section>
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer site-grid__wrapper">
     <a class="page-footer__site-title-link" href="#">
       <img class="page-footer__site-title" src="#" width="128" height="24" alt="Магазин Cat energy">
     </a>
