--- a/source/index.html
+++ b/source/index.html
@@ -31,33 +31,33 @@
 
     <section class="page-main__categories categories">
       <h2 class="categories__title visually-hidden">Категории</h2>
-      <section class="categories__slim slim">
-        <h3 class="slim__title">Похудение</h3>
-        <p class="slim__about">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="slim__button" href="#">Каталог Slim</a>
+      <section class="categories__item categories-item slim">
+        <h3 class="categories-item__title slim__title">Похудение</h3>
+        <p class="categories-item__about">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+        <a class="categories-item__button categories-button" href="#">Каталог Slim</a>
       </section>
-      <section class="categories__slim slim">
-        <h3 class="slim__title">Набор массы</h3>
-        <p class="slim__about">Заработать авторитет среди дворовых котов и даже собак?
+      <section class="categories__item categories-item">
+        <h3 class="categories-item__title">Набор массы</h3>
+        <p class="categories-item__about">Заработать авторитет среди дворовых котов и даже собак?
         Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-        <a class="slim__button" href="#">Каталог pro</a>
+        <a class="categories-item__button categories-button" href="#">Каталог pro</a>
       </section>
     </section>
     <section class="page-main__advantages advantages">
       <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list advantages-list">
-        <li class="advantages-list__item">Функциональное питание содержит только полезные питательные вещества.</li>
-        <li class="advantages-list__item">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
-        <li class="advantages-list__item">Замените один-два приема обычной еды на наше функциональное питание.</li>
-        <li class="advantages-list__item">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        <li class="advantages-list__item advantages-list__item--first-item-img">Функциональное питание содержит только полезные питательные вещества.</li>
+        <li class="advantages-list__item advantages-list__item--second-item-img">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+        <li class="advantages-list__item advantages-list__item--third-item-img">Замените один-два приема обычной еды на наше функциональное питание.</li>
+        <li class="advantages-list__item advantages-list__item--fourth-item-img">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
       </ul>
     </section>
     <section class="page-main__example example">
       <h2 class="example__title">Живой пример</h2>
       <p class="example__about">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       <div class="example__progress progress">
-        <p class="progress__value">5 кг<span class="progress__type">снижение  веса</span></p>
-        <p class="progress__value">60 дней<span class="progress__type">затрачено  времени</span></p>
+        <p class="progress__value">5 кг <span class="progress__type">снижение  веса</span></p>
+        <p class="progress__value">60 дней <span class="progress__type">затрачено  времени</span></p>
       </div>
       <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
       <div class="example__slider slider">
@@ -76,9 +76,7 @@
         <p class="contacts__slogan">приглашаем  к сотрудничеству  дилеров!</p>
         <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
       </div>
-      <div>
-        <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
-      </div>
+      <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
     </section>
   </main>
   <footer class="page-footer site-grid__wrapper">
