--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,27 +5,30 @@
   <title>Cat energy. Каталог продукции.</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
-  <header class="page-header">
-    <a class="page-header__logo-link" href="index.html">
+<body class="site-grid site-grid__wrapper">
+<header class="page-header site-grid__wrapper">
+  <div class="page-header__wrapper">
+    <a class="page-header__logo-link" href="#">
       <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
     </a>
-    <button class="burger-menu" aria-label="Главное меню"></button>
+    <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
+  </div>
     <nav class="main-menu">
       <ul class="main-menu__list">
         <li class="main-menu__item"><a class="main-menu__link" href="index.html">Главная</a></li>
-        <li class="main-menu__item"><a>Каталог продукции</a></li>
+        <li class="main-menu__item"><a class="main-menu__link">Каталог продукции</a></li>
         <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
       </ul>
     </nav>
-  </header>
-  <main class="page-main">
+  </div>
+</header>
+  <main class="page-main site-grid__wrapper">
     <h1 class="page-main__title">Каталог продукции</h1>
     <div class="page-main__products">
       <div class="page-main__product">
         <section class="product">
           <div class="product__content">
-            <img class="product__image" src="#" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 500г.">
+            <img class="product__image" src="img\chicken-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 500г.">
             <div class="product__container">
               <h3 class="product__title">Cat Energy  PRO 500 г</h3>
               <table class="product__table table-properties">
@@ -51,7 +54,7 @@
       <div class="page-main__product">
         <section class="product">
           <div class="product__content">
-            <img class="product__image" src="#" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 1000г.">
+            <img class="product__image" src="img\chicken-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка куриного филе Cat energy pro, 1000г.">
             <div class="product__container">
               <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
               <table class="product__table table-properties">
@@ -77,7 +80,7 @@
       <div class="page-main__product">
         <section class="product">
           <div class="product__content">
-            <img class="product__image" src="#" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 500г.">
+            <img class="product__image" src="img\fish-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 500г.">
             <div class="product__container">
               <h3 class="product__title">Cat Energy  PRO 500 г</h3>
               <table class="product__table table-properties">
@@ -103,7 +106,7 @@
       <div class="page-main__product">
         <section class="product">
           <div class="product__content">
-            <img class="product__image" src="#" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
+            <img class="product__image" src="img\fish-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка рыбного филе Cat energy pro, 1000г.">
             <div class="product__container">
               <h3 class="product__title">Cat Energy  PRO 1000 г</h3>
               <table class="product__table table-properties">
@@ -113,7 +116,7 @@
                 </tr>
                 <tr>
                   <td class="table-properties__property">Вкус</td>
-                  <td class="table-properties__value">Рыюа</td>
+                  <td class="table-properties__value">Рыба</td>
                 </tr>
                 <tr>
                   <td class="table-properties__property">Цена</td>
@@ -129,7 +132,7 @@
       <div class="page-main__product">
         <section class="product">
           <div class="product__content">
-            <img class="product__image" src="#" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 500г.">
+            <img class="product__image" src="img\buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 500г.">
             <div class="product__container">
               <h3 class="product__title">Cat Energy slim 500 г</h3>
               <table class="product__table table-properties">
@@ -155,7 +158,7 @@
       <div class="page-main__product">
         <section class="product">
           <div class="product__content">
-            <img class="product__image" src="#" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
+            <img class="product__image" src="img\buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
             <div class="product__container">
               <h3 class="product__title">Cat Energy slim 1000 г</h3>
               <table class="product__table table-properties">
@@ -181,7 +184,7 @@
       <div class="page-main__product">
         <section class="product">
           <div class="product__content">
-            <img class="product__image" src="#" width="140" height="144" alt="Упаковка рисовой каши Cat energy slim, 500г.">
+            <img class="product__image" src="img\rice-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка рисовой каши Cat energy slim, 500г.">
             <div class="product__container">
               <h3 class="product__title">Cat Energy slim 500 г</h3>
               <table class="product__table table-properties">
@@ -204,65 +207,75 @@
         </section>
       </div>
       <div class="page-main__product">
-        <section class="more-product">
+        <section class="product more-product">
           <div class="more-product__content">
-            <p class="more-product__text more-product__text--font">Показать еще 100500 товаров</p>
+            <p class="more-product__description">Показать еще 100500 товаров</p>
             <p class="more-product__text">На самом деле вкусов гораздо больше!</p>
-            <a class="more-product__button button button--gray" href="#" >Показать все</a>
           </div>
+            <a class="product__button button product__button--gray" href="#" >Показать все</a>
         </section>
       </div>
     </div>
-    <div class="page-main__extra extra-products">
+
+    <div class="page-main__extra-products">
       <h2 class="extra-products__title">Дополнительные товары</h2>
-      <section class="extra-products__item extra-product">
-        <h3 class="extra-product__title">Сахарозаменитель</h3>
-        <table class="extra-product__table table-properties">
-          <tr>
-            <td class="table-properties__property">1 упаковка (100г)</td>
-            <td class="table-properties__value">200 Р.</td>
-          </tr>
-        </table>
-        <a class="extra-product__button button" href="#">Заказать</a>
-      </section>
+      <div class="page-main__extra-product">
+        <section class="extra-product">
+          <h3 class="extra-product__title">Сахарозаменитель</h3>
+            <table class="extra-product__table table-properties">
+              <tr>
+                <td class="table-properties__property">1 упаковка (100г)</td>
+                <td class="table-properties__value">200 Р.</td>
+              </tr>
+            </table>
+            <a class="extra-product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="extra-products__item extra-product">
-        <h3 class="extra-product__title">Питьевая вода</h3>
-        <table class="extra-product__table table-properties">
-          <tr>
-            <td class="table-properties__property">5 литров</td>
-            <td class="table-properties__value">50 Р.</td>
-          </tr>
-        </table>
-        <a class="extra-product__button button" href="#">Заказать</a>
-      </section>
+      <div class="page-main__extra-product">
+        <section class="extra-product">
+          <h3 class="extra-product__title">Питьевая вода</h3>
+          <table class="extra-product__table table-properties">
+            <tr>
+              <td class="table-properties__property">5 литров</td>
+              <td class="table-properties__value">50 Р.</td>
+            </tr>
+          </table>
+          <a class="extra-product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="extra-products__item extra-product">
-        <h3 class="extra-product__title">Молоко</h3>
-        <table class="extra-product__table table-properties">
-          <tr>
-            <td class="table-properties__property">1 литр</td>
-            <td class="table-properties__value">100 Р.</td>
-          </tr>
-        </table>
-        <a class="extra-product__button button" href="#">Заказать</a>
-      </section>
+      <div class="page-main__extra-product">
+        <section class="extra-products__item extra-product">
+          <h3 class="extra-product__title">Молоко</h3>
+          <table class="extra-product__table table-properties">
+            <tr>
+              <td class="table-properties__property">1 литр</td>
+              <td class="table-properties__value">100 Р.</td>
+            </tr>
+          </table>
+          <a class="extra-product__button button" href="#">Заказать</a>
+        </section>
+      </div>
 
-      <section class="extra-products__item extra-product">
-        <h3 class="extra-product__title">Витамины</h3>
-        <table class="extra-product__table table-properties">
-          <tr>
-            <td class="table-properties__property">1 упаковка (30 г)</td>
-            <td class="table-properties__value">300 Р.</td>
-          </tr>
-        </table>
-        <a class="extra-product__button button" href="#">Заказать</a>
-      </section>
+      <div class="page-main__extra-product">
+        <section class="extra-products__item extra-product">
+          <h3 class="extra-product__title">Витамины</h3>
+          <table class="extra-product__table table-properties">
+            <tr>
+              <td class="table-properties__property">1 упаковка (30 г)</td>
+              <td class="table-properties__value">300 Р.</td>
+            </tr>
+          </table>
+          <a class="extra-product__button button" href="#">Заказать</a>
+        </section>
+      </div>
+
       <div class="extra-products__item bonus">
         <p class="bonus__content">Закажите все  и получите чехол для кота в подарок!</p>
       </div>
     </div>
-    <section class="contacts">
+    <section class="contacts contacts--background-gray">
       <h2 class="contacts__title visually-hidden">Контакты</h2>
       <div class="contacts__wrapper">
         <p class="contacts__slogan">приглашаем  к сотрудничеству  дилеров!</p>
@@ -273,7 +286,7 @@
       </div>
     </section>
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer site-grid__wrapper">
     <a class="page-footer__site-title-link" href="index.html">
       <img class="page-footer__site-title" src="#" width="128" height="24" alt="Магазин Cat energy">
     </a>
