--- a/source/form.html
+++ b/source/form.html
@@ -5,21 +5,23 @@
   <title>Cat energy. Подбор программы</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
-  <header class="page-header">
-    <a class="page-header__logo-link" href="index.html">
-      <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
-    </a>
-    <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
+<body class="site-grid site-grid__wrapper">
+  <header class="page-header site-grid__wrapper">
+    <div class="page-header__wrapper">
+      <a class="page-header__logo-link" href="#">
+        <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
+      </a>
+      <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
+    </div>
     <nav class="main-menu">
       <ul class="main-menu__list">
         <li class="main-menu__item"><a class="main-menu__link" href="index.html">Главная</a></li>
         <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
-        <li class="main-menu__item"><a>Подбор программы</a></li>
+        <li class="main-menu__item"><a class="main-menu__link">Подбор программы</a></li>
       </ul>
     </nav>
   </header>
-  <main class="page-main">
+  <main class="page-main site-grid__wrapper">
     <h1 class="page-main__title">Подбор программы</h1>
     <form class="page-main__program-form program-form" action="echo.htmlacademy.ru" method="post">
       <p class="program-form__description">Заполните анкету и мы подберем  программу питания для вашего кота</p>
@@ -95,9 +97,8 @@
         <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
       </div>
     </section>
-
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer site-grid__wrapper">
     <a class="page-footer__site-title-link" href="index.html">
       <img class="page-footer__site-title" src="#" width="128" height="24" alt="Магазин Cat energy">
     </a>
