--- a/source/index.html
+++ b/source/index.html
@@ -12,14 +12,14 @@
         <img class="page-header__logo-image"  src="#" width="191" height="38" alt="Логотип магазина Cat energy">
       </a>
       <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
+    </div>
       <nav class="main-menu">
         <ul class="main-menu__list">
-          <li class="main-menu__item"><a>Главная</a></li>
+          <li class="main-menu__item"><a class="main-menu__link">Главная</a></li>
           <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
           <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
         </ul>
       </nav>
-    </div>
   </header>
   <main class="page-main site-grid__wrapper">
     <section class="page-main__promo promo">
@@ -90,8 +90,10 @@
     </div>
     <div class="page-footer__copyright copyright">
       <a class="copyright__company" href="#">HTML Academy</a>
-      <a class="copyright__logo" href="#"><img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy"></a>
+      <a class="copyright__logo" href="#">
+        <img class="copyright__logo-icon" src="#" width="27" height="34" alt="Логотип HTML Academy">
+      </a>
     </div>
   </footer>
 </body>
-</html>
+</html>#
