--- a/source/index.html
+++ b/source/index.html
@@ -13,13 +13,13 @@
       </a>
       <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
     </div>
-      <nav class="main-menu">
-        <ul class="main-menu__list">
-          <li class="main-menu__item"><a class="main-menu__link">Главная</a></li>
-          <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
-          <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
-        </ul>
-      </nav>
+    <nav class="main-menu">
+      <ul class="main-menu__list">
+        <li class="main-menu__item"><a class="main-menu__link">Главная</a></li>
+        <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
+        <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
+      </ul>
+    </nav>
   </header>
   <main class="page-main site-grid__wrapper">
     <section class="page-main__promo promo">
@@ -31,8 +31,8 @@
 
     <section class="page-main__categories categories">
       <h2 class="categories__title visually-hidden">Категории</h2>
-      <section class="categories__item categories-item slim">
-        <h3 class="categories-item__title slim__title">Похудение</h3>
+      <section class="categories__item categories-item">
+        <h3 class="categories-item__title">Похудение</h3>
         <p class="categories-item__about">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         <a class="categories-item__button categories-button" href="#">Каталог Slim</a>
       </section>
@@ -96,4 +96,4 @@
     </div>
   </footer>
 </body>
-</html>#
+</html>
