сделал адаптив для хедера, каталога продуктов под tablet, сломал все остальное

--- a/source/index.html
+++ b/source/index.html
@@ -14,9 +14,9 @@
       </a>
       <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
     </div>
-    <nav class="main-menu">
+    <nav class="page-header__main-menu main-menu">
       <ul class="main-menu__list">
-        <li class="main-menu__item"><a class="main-menu__link main-menu__link--current">Главная</a></li>
+        <li class="main-menu__item"><a class="main-menu__link main-menu__item--current">Главная</a></li>
         <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
         <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
       </ul>
@@ -83,7 +83,7 @@
     </section>
   </main>
   <footer class="page-footer site-grid__wrapper">
-    <div class="page-footer__wrapper">
+    <div class="page-footer__inner">
       <a class="page-footer__site-title-link" href="#">
         <img class="page-footer__site-title" src="img/logo-footer.svg" width="128" height="24" alt="Магазин Cat energy">
       </a>
