внес правки после проверки в валидаторе и в html tree

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -229,7 +229,7 @@
             <tr class="table-properties__row">
               <td class="table-properties__property">1 упаковка (100г)</td>
               <td class="table-properties__value">200 Р.</td>
-            </tr class="table-properties__row">
+            </tr>
           </table>
           <a class="extra-product__button button" href="#">Заказать</a>
         </section>
@@ -242,7 +242,7 @@
             <tr class="table-properties__row">
               <td class="table-properties__property">5 литров</td>
               <td class="table-properties__value">50 Р.</td>
-            </tr class="table-properties__row">
+            </tr>
           </table>
           <a class="extra-product__button button" href="#">Заказать</a>
         </section>
@@ -303,7 +303,7 @@
     <div class="page-footer__social social">
       <a class="social__link" href="#" aria-label="Мы в Vkontakte">
         <span class="social__icon">
-          <svg width="22" height="12" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+          <svg width="22" height="12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
             <g>
               <path
               d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
@@ -327,7 +327,7 @@
       </a>
       <a class="social__link" href="#" aria-label="Мы в Instagram">
         <span class="social__icon">
-          <svg width="16" height="16" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+          <svg width="16" height="16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
             <style type="text/css">
               .st0 {
                 fill: #231F20;
@@ -342,7 +342,7 @@
         </span>
       </a>
       <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">
-        <svg width="10" height="19" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+        <svg width="10" height="19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
           <g>
             <path
             d="M7.1,19H2v-8.8H0V5.8h1.9c-0.1-2,0.2-3.4,1.1-4.4C3.8,0.5,5,0.1,6.5,0L10,0v4.2H7.2C7.1,4.4,7,5,7,5.8H10v4.4H7.1V19z
