--- a/source/index.html
+++ b/source/index.html
@@ -14,10 +14,10 @@
       </a>
       <button class="burger-menu burger-menu--active" aria-label="Главное меню"></button>
     </div>
-    <nav class="page-header__main-menu main-menu">
+    <nav class="page-header__main-menu main-menu ">
       <ul class="main-menu__list">
-        <li class="main-menu__item"><a class="main-menu__link main-menu__item--current">Главная</a></li>
-        <li class="main-menu__item"><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
+        <li class="main-menu__item"><a class="main-menu__link" href="index.html">Главная</a></li>
+        <li class="main-menu__item main-menu__item--current"><a class="main-menu__link">Каталог продукции</a></li>
         <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
       </ul>
     </nav>
@@ -33,12 +33,12 @@
     <section class="page-main__categories categories">
       <h2 class="categories__title visually-hidden">Категории</h2>
       <section class="categories__item categories-item categories-slim">
-        <h3 class="categories-item__title categories-slim--image">Похудение</h3>
+        <h3 class="categories-item__title categories-slim__image">Похудение</h3>
         <p class="categories-item__about">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         <a class="categories-item__button categories-button" href="#">Каталог Slim</a>
       </section>
       <section class="categories__item categories-item categories-item--max-padding categories-pro">
-        <h3 class="categories-item__title categories-pro--image">Набор массы</h3>
+        <h3 class="categories-item__title categories-pro__image">Набор массы</h3>
         <p class="categories-item__about">Заработать авторитет среди дворовых котов и даже собак?
         Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
         <a class="categories-item__button categories-button" href="#">Каталог pro</a>
@@ -90,7 +90,7 @@
       <div class="page-footer__social social">
         <a class="social__link" href="#" aria-label="Мы в Vkontakte">
           <span class="social__icon">
-            <svg width="22" height="12" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+            <svg width="22" height="12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
               <g>
                 <path
                 d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
@@ -114,7 +114,7 @@
         </a>
         <a class="social__link" href="#" aria-label="Мы в Instagram">
           <span class="social__icon">
-            <svg width="16" height="16" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+            <svg width="16" height="16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
               <style type="text/css">
                 .st0 {
                   fill: #231F20;
@@ -129,7 +129,7 @@
           </span>
         </a>
         <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">
-          <svg width="10" height="19" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+          <svg width="10" height="19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
             <g>
               <path
               d="M7.1,19H2v-8.8H0V5.8h1.9c-0.1-2,0.2-3.4,1.1-4.4C3.8,0.5,5,0.1,6.5,0L10,0v4.2H7.2C7.1,4.4,7,5,7,5.8H10v4.4H7.1V19z
