доделал адаптацию catalog.html для tablet-width

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,6 @@
   <main class="page-main">
     <div class="page-main__wrapper">
       <h1 class="page-main__title">Каталог продукции</h1>
-
       <div class="page-main__products products">
         <div class="page-main__product">
           <section class="product">
@@ -222,73 +221,81 @@
 
     <div class="page-main__extra-products extra-products">
      <div class="page-main__wrapper">
-      <h2 class=" page-main__wrapper extra-products__title">Дополнительные товары</h2>
+      <h2 class="extra-products__title">Дополнительные товары</h2>
       <div class="page-main__extra-product">
-        <section class="extra-product">
-          <h3 class="extra-product__title">Сахарозаменитель</h3>
-          <table class="extra-product__table table-properties">
-            <tr class="table-properties__row">
-              <td class="table-properties__property">1 упаковка (100г)</td>
-              <td class="table-properties__value">200 Р.</td>
-            </tr>
-          </table>
+        <section class="extra-product extra-product--border-top">
+          <div class="extra-product__content">
+            <h3 class="extra-product__title">Сахарозаменитель</h3>
+            <table class="extra-product__table table-properties">
+              <tr class="table-properties__row">
+                <td class="table-properties__property">1 упаковка (100г)</td>
+                <td class="table-properties__value">200 Р.</td>
+              </tr>
+            </table>
+          </div>
           <a class="extra-product__button button" href="#">Заказать</a>
         </section>
       </div>
 
       <div class="page-main__extra-product">
         <section class="extra-product">
-          <h3 class="extra-product__title">Питьевая вода</h3>
-          <table class="extra-product__table table-properties">
-            <tr class="table-properties__row">
-              <td class="table-properties__property">5 литров</td>
-              <td class="table-properties__value">50 Р.</td>
-            </tr>
-          </table>
+          <div class="extra-product__content">
+            <h3 class="extra-product__title">Питьевая вода</h3>
+            <table class="extra-product__table table-properties">
+              <tr class="table-properties__row">
+                <td class="table-properties__property">5 литров</td>
+                <td class="table-properties__value">50 Р.</td>
+              </tr>
+            </table>
+          </div>
           <a class="extra-product__button button" href="#">Заказать</a>
         </section>
       </div>
 
       <div class="page-main__extra-product">
         <section class="extra-products__item extra-product">
-          <h3 class="extra-product__title">Молоко</h3>
-          <table class="extra-product__table table-properties">
-            <tr class="table-properties__row">
-              <td class="table-properties__property">1 литр</td>
-              <td class="table-properties__value">100 Р.</td>
-            </tr>
-          </table>
+          <div class="extra-product__content">
+            <h3 class="extra-product__title">Молоко</h3>
+            <table class="extra-product__table table-properties">
+              <tr class="table-properties__row">
+                <td class="table-properties__property">1 литр</td>
+                <td class="table-properties__value">100 Р.</td>
+              </tr>
+            </table>
+          </div>
           <a class="extra-product__button button" href="#">Заказать</a>
         </section>
       </div>
 
       <div class="page-main__extra-product">
         <section class="extra-products__item extra-product">
-          <h3 class="extra-product__title">Витамины</h3>
-          <table class="extra-product__table table-properties">
-            <tr class="table-properties__row">
-              <td class="table-properties__property">1 упаковка (30 г)</td>
-              <td class="table-properties__value">300 Р.</td>
-            </tr>
-          </table>
+          <div class="extra-product__content">
+            <h3 class="extra-product__title">Витамины</h3>
+            <table class="extra-product__table table-properties">
+              <tr class="table-properties__row">
+                <td class="table-properties__property">1 упаковка (30 г)</td>
+                <td class="table-properties__value">300 Р.</td>
+              </tr>
+            </table>
+          </div>
           <a class="extra-product__button button" href="#">Заказать</a>
         </section>
       </div>
 
-      <div class="extra-products__item extrta-bonus">
-        <div class="extrta-bonus__wrapper">
-          <p class="extrta-bonus__content">Закажите все</p>
-          <p class="extrta-bonus__content">и получите чехол для кота в подарок!</p>
+      <div class="page-main__extra-product extra-products__item extra-bonus">
+        <div class="extra-bonus__wrapper">
+          <p class="extra-bonus__content">Закажите все</p>
+          <p class="extra-bonus__content">и получите чехол для кота в подарок!</p>
         </div>
       </div>
     </div>
   </div>
 
-  <section class="contacts contacts--background-gray">
+  <section class="page-main__contacts contacts">
+    <h2 class="contacts__title visually-hidden">Контакты</h2>
     <div class="page-main__wrapper">
-      <h2 class="contacts__title visually-hidden">Контакты</h2>
       <div class="contacts__wrapper">
-        <p class="contacts__slogan">приглашаем  к сотрудничеству  дилеров!</p>
+        <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
         <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
       </div>
     </div>
